--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     ext.junitVersion = '4.12'
     ext.runnerVersion = '1.0.2'
     ext.espressoVersion = '3.1.0-alpha3'
+    ext.rxJava2Version = '2.2.3'
+    ext.rxAndroidVersion = '2.1.0'
 
     repositories {
         google()
